--- a/app.html
+++ b/app.html
@@ -4790,10 +4790,12 @@
         .footer-disclaimer {
             font-size: 12px;
             line-height: 1.6;
-            color: #5A6B7A;
+            color: #9ca3af;
             padding: 24px 0;
             border-bottom: 1px solid rgba(255, 255, 255, 0.08);
             max-width: 800px;
+            text-align: center;
+            margin: 0 auto;
         }
 
         /* --- Row 3: Bottom bar --- */
